[package]
name = "butterfly-route"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
# CLI
clap = { workspace = true }

# Error handling
anyhow = "1.0.101"
thiserror = { workspace = true }

# PBF parsing
osmpbf = "0.3.8"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Checksums
crc = "3.4"

# Logging
env_logger = { workspace = true }

# Structured logging (tracing)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

# SHA-256 hashing
sha2 = "0.10.9"
hex = "0.4"

# Timestamps
chrono = "0.4.43"

# Parallelization
rayon = "1.11"

# Fast hashing (FxHashSet for CCH contraction)
rustc-hash = "2.1"

# Step 9: Query server
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "timeout", "catch-panic", "compression-gzip", "compression-br"] }

# Spatial indexing
rstar = "0.12.2"

# Geometry algorithms (concave hull, simplification)
geo = "0.29"

# Priority queue for Dijkstra
priority-queue = "2.7"

# Random number generation for validation
rand = "0.9"

# Benchmarking
hdrhistogram = "7.5.4"

# Arrow streaming for bulk matrix output
arrow = { version = "54", default-features = false, features = ["ipc"] }
futures = "0.3.31"
bytes = "1.11"
parking_lot = "0.12.5"

# Prometheus metrics
axum-prometheus = "0.8"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "butterfly-bench"
path = "src/bench/main.rs"
