
[package]
name = "butterfly-shrink"
version = "2.0.0"
description = "Butterfly-shrink - A tool to shrink OpenStreetMap data."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/butterfly-osm/butterfly-osm"
documentation = "https://docs.rs/butterfly-shrink"
readme = "README.md"
keywords = ["osm", "pbf", "openstreetmap", "shrink"]
categories = ["command-line-utilities"]
edition.workspace = true

[lib]
name = "butterfly_shrink"
path = "src/lib.rs"

[[bin]]
name = "butterfly-shrink"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
osmpbf = "0.3"
butterfly-common = { path = "../../butterfly-common", version = "2.0.0" }
uuid = { version = "1.10", features = ["v4"] }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
md5 = "0.7"
