
[package]
name = "butterfly-shrink"
version = "2.0.0"
description = "Butterfly-shrink - A tool to shrink OpenStreetMap data."
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/butterfly-osm/butterfly-osm"
documentation = "https://docs.rs/butterfly-shrink"
readme = "README.md"
keywords = ["osm", "pbf", "openstreetmap", "shrink"]
categories = ["command-line-utilities"]
edition.workspace = true

[lints.rust]
warnings = "deny"

[lib]
name = "butterfly_shrink"
path = "src/lib.rs"

[[bin]]
name = "butterfly-shrink"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
osmpbf = "0.3"
protobuf = "3.1"
byteorder = "1.5"
flate2 = "1.0"
butterfly-common = { path = "../../butterfly-common", version = "2.0.0" }
rocksdb = { version = "0.22", default-features = false, features = ["zstd"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
csv = "1.3"
num_cpus = "1.17"
crossbeam-channel = "0.5"
rayon = "1.10"
log = "0.4"
env_logger = { workspace = true }
anyhow = "1.0"

[build-dependencies]
protobuf-codegen = "3.1"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.0"
md5 = "0.7"
